* Fix bug with css label. * Update azurecurve menu for easier maintenance. * Move require of azurecurve menu below security check. * Localization fixes. * Fix bug with icon display.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,9 +60,8 @@ h2.azrcrv-t {
 }
 
 label.azrcrv-t {
-	font-size: 1.3em;
-	position: absolute;
-	top: 20px;
+	font-size: 1.1em;
+	padding-top: 30px;
 }
 
 /* -------------------------------------
